# ckanext-advanced_search

./: MANIFEST.in  README.md  setup.cfg  test.ini
.github/workflows/: test.yml
ckanext/advanced_search/: cli.py  helpers.py  plugin.py  views.py
ckanext/advanced_search/assets/: script.js  webassets.yml
ckanext/advanced_search/logic/: action.py  auth.py  schema.py  validators.py
ckanext/advanced_search/templates/: advanced_search.html
ckanext/advanced_search/tests/: test_helpers.py  test_plugin.py  test_views.py
ckanext/advanced_search/tests/logic/: test_action.py  test_auth.py  test_validators.py
